/*
    This file is part of ELMO-2.

    ELMO-2 is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ELMO-2 is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with ELMO-2.  If not, see <http://www.gnu.org/licenses/>.
*/

/*!
    @file Traces.hpp
    @brief Contains the internal representation of the generated Traces.
    @author Scott Egerton
    @date 2017-2018
    @copyright GNU Affero General Public License Version 3+
*/

#ifndef TRACES_HPP
#define TRACES_HPP

namespace ELMO2
{
namespace Internal
{
//! @class Traces
//! @brief The internal representation of the generated Traces for the target
//! program.
//! TODO: Learn more about traces to fill in a detailed description of what this
//! is.
class Traces
{
};
} // namespace Internal
} // namespace ELMO2

#endif
